fix: port from v3 - missing border with small number of rows

--- a/packages/angular/projects/clr-angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/packages/angular/projects/clr-angular/src/data/datagrid/_datagrid.clarity.scss
@@ -40,6 +40,8 @@
     overflow: auto;
     flex: 1 1 auto;
     margin-top: $clr_baselineRem_0_5;
+    // Force content stretch on Safari
+    display: flex;
   }
 
   .datagrid-container {
@@ -643,6 +645,7 @@
 
   .datagrid-table-wrapper {
     display: flex;
+    flex: 1 1 auto;
   }
 
   .datagrid-table {
